<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sun_backgroud"
    tools:context=".ui.MainActivity">

    <SearchView
        android:id="@+id/searchViewCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_searchview"
        android:iconifiedByDefault="false"
        android:queryHint="@string/str_search_query"
        android:searchIcon="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="15dp"
        android:fontFamily="@font/merriweathersans_medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="@id/searchViewCity"
        app:layout_constraintStart_toStartOf="@id/searchViewCity"
        app:layout_constraintTop_toBottomOf="@id/searchViewCity" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCityName"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/str_today"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:fontFamily="@font/merriweathersans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lottieAnimation"
        app:layout_constraintTop_toBottomOf="@+id/tvCityName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_celcius"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:fontFamily="@font/merriweathersans_semibold"
        app:layout_constraintEnd_toEndOf="@id/tvToday"
        app:layout_constraintStart_toStartOf="@id/tvToday"
        app:layout_constraintTop_toBottomOf="@id/tvToday" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWeatherCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_sunny"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:fontFamily="@font/merriweathersans_regular"
        app:layout_constraintEnd_toEndOf="@id/lottieAnimation"
        app:layout_constraintStart_toStartOf="@id/lottieAnimation"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMaxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_max_00_00"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:fontFamily="@font/merriweathersans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWeatherCondition" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMinTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_min_00_00"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:fontFamily="@font/merriweathersans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMaxTemperature" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/str_tuesday"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:fontFamily="@font/merriweathersans_bold"
        app:layout_constraintEnd_toEndOf="@id/tvMinTemperature"
        app:layout_constraintStart_toStartOf="@id/tvMinTemperature"
        app:layout_constraintTop_toBottomOf="@id/tvMinTemperature" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str__15_december_2023"
        android:textColor="@color/black"
        app:fontFamily="@font/merriweathersans_regular"
        app:layout_constraintEnd_toEndOf="@id/tvDay"
        app:layout_constraintStart_toStartOf="@id/tvDay"
        app:layout_constraintTop_toBottomOf="@id/tvDay" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="88dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/shape_frame"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_temperature" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvHumidityDigit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str__00"
                        android:textColor="@color/black"
                        app:fontFamily="@font/merriweathersans_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/str_humidity"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:fontFamily="@font/merriweathersans_medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="88dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/shape_frame"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_wind_speed" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvWindDigit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str__0_00m_s"
                        android:textColor="@color/black"
                        app:fontFamily="@font/merriweathersans_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvWindSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/str_wind_speed"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:fontFamily="@font/merriweathersans_medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="88dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/shape_frame"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_rain_small_icon" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str_sunny"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        app:fontFamily="@font/merriweathersans_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/str_condition"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:fontFamily="@font/merriweathersans_medium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/linear"
                app:layout_constraintStart_toStartOf="@+id/linear"
                app:layout_constraintTop_toBottomOf="@id/linear">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="88dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/shape_frame"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sunrise" />

                    <androidx.appcompat.widget.AppCompatTextView

                        android:id="@+id/tvSunriseDigit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str__00_00"
                        android:textColor="@color/black"
                        app:fontFamily="@font/merriweathersans_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/str_sunrise"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:fontFamily="@font/merriweathersans_medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="88dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/shape_frame"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sunset" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSunsetDigit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str__00_00"
                        android:textColor="@color/black"
                        app:fontFamily="@font/merriweathersans_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSunset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/str_sunset"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:fontFamily="@font/merriweathersans_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="88dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/shape_frame"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sea" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSeaDigit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str__0000_hpa"
                        android:textColor="@color/black"
                        app:fontFamily="@font/merriweathersans_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/str_sea"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:fontFamily="@font/merriweathersans_medium" />
                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/str_design_by"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>